Tweak 3scale SSO

--- a/evals/roles/rhsso/templates/keycloak-realm.json.j2
+++ b/evals/roles/rhsso/templates/keycloak-realm.json.j2
@@ -101,6 +101,8 @@
                 "standardFlowEnabled": true,
                 "rootUrl": "https://3scale-admin.{{ threescale_route_suffix }}",
                 "fullScopeAllowed": true,
+		"directAccessGrantsEnabled": true,
+		"publicClient": true,
                 "access": {
                     "view": true,
                     "configure": true,
