Make the "Fuse pull secret" role general

--- a/roles/imagestream_pull_secret/templates/imagestream-pull-secret.yml.j2
+++ b/roles/imagestream_pull_secret/templates/imagestream-pull-secret.yml.j2
@@ -3,5 +3,5 @@ data:
   .dockerconfigjson: {{ fuse_docker_config }}
 kind: Secret
 metadata:
-  name: syndesis-pull-secret
+  name: imagestream-pull-secret
 type: kubernetes.io/dockerconfigjson
